2011-08-17 Roman
- XMLNode: Prevent new line doubled on save node by XMLNode::BrOpenPrev.
- UI.VCAEngine, UI.Vision: To primitive "ElFigure" for modes "Line and Text edit" new attribute "confirm" is added for
    confirm on edit disabling allow.


2011-08-16 Roman
- SYS: User's API object XMLNodeObj is fixed for prevent self node include by childAdd() or childIns().
    Return empty string is made for XMLNodeObj::attr().
- UI.Vision: Create runtime context menu for widgets is set to event QEvent::MouseButtonRelease for prevent incidentally one click
    menu items call.


2011-08-13 Roman
- UI.QTCfg: Full text edit is added into table cells edit.
- FIX:UI.Vision: Deranged widgets level operations is fixed.


2011-08-12 Roman
- FIX:UI.QTCfg: Start periodic update icon is fixed.
- UI.VCAEngine: For attribute "text" of primitive "Text" context help is added.
- UI.Vision: The background for developed widget window is set to QT::Dense7Pattern.
    Processing events filter from scrolled area of developed widget window is added.
    Wait for double click, into development, is set only for editable widgets.


2011-08-10 Roman
- FIX:UI.VCAEngine: No primitive's attribute present warning is fixed for disabled widgets.
    Not full disable heritors widgets on the widget disable is fixed.


2011-08-09 Roman
- FIX:DAQ.ModBus, DAQ.LogicLev, DAQ.Siemens: Remove only not present already attributes on parameter enable is made.


2011-08-07 Roman
- !:FIX:Transport.*: Unsigned type use for read and write return is fixed. Resource is added for input/output counters of client tasks.


2011-08-03 Roman
- !!!!:FIX:SYS: Wait for init detachable tasks is disabled for prevent hang on wait fast closed task.
- FIX:DAQ.ModBus: Start and stop flags process for logical parameters type in wait connection restore is fixed.
    Write from logical type parameters is fixed.
- FIX:Protocol.SelfSystem: Input protocol is some fixed for correct error get and some other errors process.